Read json file and parse fake data into list of project

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/TasksFragment"
-        android:name="ch.wenksi.pushalerts.TasksFragment"
+        android:name="ch.wenksi.pushalerts.ui.TasksFragment"
         android:label="Tasks"
         tools:layout="@layout/fragment_tasks">
     </fragment>
