--- a/app/src/main/res/layout/item_task_open.xml
+++ b/app/src/main/res/layout/item_task_open.xml
@@ -81,20 +81,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ivDescriptionIcon"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="01.04.21 - 20:34" />
 
         <TextView
             android:id="@+id/tvAssigned"
-            style="@style/TextAppearance.MaterialComponents.Body1"
+            style="@style/TextAppearance.MaterialComponents.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="22dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Mark" />
+            android:layout_marginTop="12dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ivDescriptionIcon"
+            tools:text="user@mail.com" />
 
         <Button
             android:id="@+id/btnAssign"
