--- a/app/src/main/res/layout/item_task_closed.xml
+++ b/app/src/main/res/layout/item_task_closed.xml
@@ -44,7 +44,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/ivSourceIcon"
+            android:id="@+id/ivTaskSourceIcon"
             android:layout_width="19dp"
             android:layout_height="19dp"
             android:src="@drawable/ic_outline_notifications_24"
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
-            app:layout_constraintStart_toEndOf="@id/ivSourceIcon"
+            app:layout_constraintStart_toEndOf="@id/ivTaskSourceIcon"
             app:layout_constraintTop_toBottomOf="@id/tvTaskNumber"
             tools:text="This is the source" />
 
@@ -70,7 +70,7 @@
             android:src="@drawable/ic_outline_description_24"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/ivSourceIcon" />
+            app:layout_constraintTop_toBottomOf="@id/ivTaskSourceIcon" />
 
 
         <TextView
