--- a/app/src/main/res/layout/fragment_tab_open.xml
+++ b/app/src/main/res/layout/fragment_tab_open.xml
@@ -24,6 +24,7 @@
         <com.google.android.material.chip.Chip
             android:id="@+id/chipFilterUnassigned"
             style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:textAppearance="@style/Widget.PushAlerts.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checkable="true"
