--- a/app/src/main/res/layout/item_task_closed.xml
+++ b/app/src/main/res/layout/item_task_closed.xml
@@ -17,7 +17,7 @@
 
         <TextView
             android:id="@+id/tvTaskNumber"
-            style="@style/TextAppearance.MaterialComponents.Body1"
+            style="@style/Widget.PushAlerts.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
 
         <TextView
             android:id="@+id/tvTaskName"
-            style="@style/TextAppearance.MaterialComponents.Body1"
+            style="@style/Widget.PushAlerts.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -54,7 +54,7 @@
 
         <TextView
             android:id="@+id/tvTaskSource"
-            style="@style/TextAppearance.MaterialComponents.Body2"
+            style="@style/Widget.PushAlerts.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -75,7 +75,7 @@
 
         <TextView
             android:id="@+id/tvTaskDescription"
-            style="@style/TextAppearance.MaterialComponents.Body2"
+            style="@style/Widget.PushAlerts.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -86,17 +86,16 @@
 
         <TextView
             android:id="@+id/tvTaskCreatedAt"
-            style="@style/TextAppearance.MaterialComponents.Caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textAppearance="@style/Widget.PushAlerts.Caption"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:text="01.04.21 - 20:34" />
 
         <TextView
             android:id="@+id/tvAssigned"
-            style="@style/TextAppearance.MaterialComponents.Body2"
+            style="@style/Widget.PushAlerts.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
