--- a/app/src/main/res/layout/item_task_open.xml
+++ b/app/src/main/res/layout/item_task_open.xml
@@ -17,7 +17,7 @@
 
         <TextView
             android:id="@+id/tvTaskNumber"
-            style="@style/TextAppearance.MaterialComponents.Body1"
+            style="@style/Widget.PushAlerts.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
 
         <TextView
             android:id="@+id/tvTaskName"
-            style="@style/TextAppearance.MaterialComponents.Body1"
+            style="@style/Widget.PushAlerts.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -45,7 +45,7 @@
 
         <TextView
             android:id="@+id/tvTaskSource"
-            style="@style/TextAppearance.MaterialComponents.Body2"
+            style="@style/Widget.PushAlerts.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -66,7 +66,7 @@
 
         <TextView
             android:id="@+id/tvTaskDescription"
-            style="@style/TextAppearance.MaterialComponents.Body2"
+            style="@style/Widget.PushAlerts.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -77,7 +77,7 @@
 
         <TextView
             android:id="@+id/tvTaskCreatedAt"
-            style="@style/TextAppearance.MaterialComponents.Caption"
+            style="@style/Widget.PushAlerts.Caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -87,7 +87,7 @@
 
         <TextView
             android:id="@+id/tvAssigned"
-            style="@style/TextAppearance.MaterialComponents.Body2"
+            style="@style/Widget.PushAlerts.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
@@ -101,7 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="0dp"
-            android:text="assign me"
+            android:text="@string/btnAssign"
             android:textSize="11sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTaskDescription" />
@@ -112,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="0dp"
-            android:text="reject"
+            android:text="@string/btnReject"
             android:textSize="11sp"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +125,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="0dp"
-            android:text="close"
+            android:text="@string/btnClose"
             android:textSize="11sp"
             android:visibility="gone"
             app:layout_constraintStart_toEndOf="@id/btnReject"
