--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PushAlerts" parent="Theme.MaterialComponents.DayNight">
+    <style name="Theme.PushAlerts" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="fontFamily">@font/gothica1_light</item>
         <item name="android:fontFamily">@font/gothica1_light</item>
         <item name="android:textColor">@color/textPrimary</item>
@@ -13,7 +13,6 @@
         <item name="colorOnSecondary">@color/textPrimary</item>
 
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-
 <!--        <item name="colorPrimaryVariant">#0039CB</item>-->
 <!--        <item name="colorSecondaryVariant">#0039CB</item>-->
 <!--        <item name="colorError">#F44336</item>-->
@@ -44,6 +43,11 @@
 
     <style name="Widget.PushAlerts.Chips" parent="Widget.MaterialComponents.Chip.Choice">
         <item name="android:fontFamily">@font/gothica1_bold</item>
+    </style>
+
+    <style name="Widget.PushAlerts.Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
+        <item name="backgroundTint">@color/secondary</item>
+        <item name="android:textColor">@color/primary</item>
     </style>
 
 
