--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <group
-        android:id="@+id/group1"
-        android:checkableBehavior="single">
-        <item
-            android:id="@+id/item1"
-            android:checked="true"
-            android:icon="@drawable/ic_baseline_menu_24"
-            android:title="Text1" />
-        <item
-            android:id="@+id/item2"
-            android:icon="@drawable/ic_outline_person_24"
-            android:title="Text2" />
-        <item
-            android:id="@+id/item3"
-            android:icon="@drawable/ic_outline_add_circle_outline_24"
-            android:title="Text3" />
+        android:id="@+id/Projects"
+        android:checkableBehavior="none"
+        android:orderInCategory="1">
     </group>
-
+    <group
+        android:id="@+id/Actions"
+        android:checkableBehavior="none">
+        <item
+            android:id="@+id/AboutFragment"
+            android:icon="@drawable/ic_baseline_info_24"
+            android:title="About" />
+        <item
+            android:id="@+id/Logout"
+            android:icon="@drawable/ic_baseline_logout_24"
+            android:title="Logout" />
+    </group>
 </menu>
