--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,4 +19,9 @@
         android:name="ch.wenksi.pushalerts.ui.tasks.TaskDetailsFragment"
         android:label="Task Details"
         tools:layout="@layout/fragment_task_details" />
+    <fragment
+        android:id="@+id/AboutFragment"
+        android:name="ch.wenksi.pushalerts.ui.AboutFragment"
+        android:label="AboutFragment"
+        tools:layout="@layout/fragment_about" />
 </navigation>
