--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        app:itemTextAppearance="@style/Widget.PushAlerts.FontBold"
+        style="@style/Widget.PushAlerts.NavigationView"
         app:headerLayout="@layout/header_navigation_drawer"
         app:menu="@menu/navigation_menu" />
 
