--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -10,17 +10,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:text="Hey Title"
-        android:textAppearance="?attr/textAppearanceHeadline6" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
-        android:text="Whats up?"
-        android:textAppearance="?attr/textAppearanceBody2"
-        android:textColor="@color/material_on_surface_emphasis_medium" />
-
+        android:textColor="@color/textSecondary"
+        android:text="Push Alerts"
+        android:textAppearance="@style/Widget.PushAlerts.Headline1" />
 </LinearLayout>
