--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -3,19 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <group
         android:id="@+id/Projects"
-        android:checkableBehavior="none"
+        android:checkableBehavior="single"
         android:orderInCategory="1">
     </group>
     <group
         android:id="@+id/Actions"
-        android:checkableBehavior="none">
-        <item
-            android:id="@+id/AboutFragment"
-            android:icon="@drawable/ic_baseline_info_24"
-            android:title="About" />
-        <item
-            android:id="@+id/Logout"
-            android:icon="@drawable/ic_baseline_logout_24"
-            android:title="Logout" />
+        android:checkableBehavior="single">
     </group>
 </menu>
